--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,3 +7,9 @@ data_ingestion:
   source_URL: https://github.com/venkatshan707/DataSets/raw/main/Chicken-fecal-images.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5 # downloading v16 base modeland saving as its 
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5 # adding custom layer with base model downlaoded
