--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,3 +13,8 @@ prepare_base_model:
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5 # downloading v16 base modeland saving as its 
   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5 # adding custom layer with base model downlaoded
+
+prepare_callbacks:
+  root_dir: artifacts/prepare_callbacks
+  tensorboard_root_log_dir: artifacts/prepare_callbacks/tensorboard_log_dir # To view the track of model training
+  checkpoint_model_filepath: artifacts/prepare_callbacks/checkpoint_dir/model.h5 #To have checkpoints on model training. From one check point (after training some ephocs some checkpoints will be saved) we can resume traing as well
