--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,8 @@ artifacts_root: artifacts
 
 #It will create a folder called data_ingestion under artifacts and bring the input zip file
 data_ingestion:
-  root_dir: artifacts/data_ingestion
+  root_dir: artifacts/data_ingestion # In future if you are trying to modify anything out of these we can simply modify in this file. 
+  # Hard coding directly inside the coding files will leads compliacations when editing
   source_URL: https://github.com/venkatshan707/DataSets/raw/main/Chicken-fecal-images.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
