--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,8 +11,8 @@ data_ingestion:
 
 
 prepare_base_model:
-  root_dir: artifacts/prepare_base_model
-  base_model_path: artifacts/prepare_base_model/base_model.h5 # downloading v16 base modeland saving as its 
+  root_dir: artifacts/prepare_base_model # Directory for saving base model
+  base_model_path: artifacts/prepare_base_model/base_model.h5 # downloading v16 base model in the locationa and saving as it is.
   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5 # adding custom layer with base model downlaoded
 
 prepare_callbacks:
